testsuite/negative/array.n


class A {
  foo () : void {
     _ = array.[0][] // E: array must have positive dimensions
   }
}

class B865 {
  foo () : void {
     _ = array.[[]][] // E: invalid array rank
   }
}

class Bug872 {
  foo () : void {
     _ = array.[33][] // E: array must have at most 32 dimensions
   }
}

class Bug880 {
  foo () : void {
    _ = array[()]; // E: array element type cannot be void
    _ = array[null : void]; // E: array element type cannot be void
  }
}